syntax = "proto3";

option java_multiple_files = true;
option java_package = "sample.shoppingcart.proto";
option java_outer_classname = "ShoppingCartProto";

package shoppingcart;

// gRPC definition for ShoppingCartService

// tag::GetItemPopularity[]
service ShoppingCartService {
// end::GetItemPopularity
    rpc AddItem (AddItemRequest) returns (Cart) {}
    rpc UpdateItem (UpdateItemRequest) returns (Cart) {}
    rpc Checkout (CheckoutRequest) returns (Cart) {}
    rpc GetCart (GetCartRequest) returns (Cart) {}

    // tag::GetItemPopularity
    rpc GetItemPopularity(GetItemPopularityRequest) returns (GetItemPopularityResponse) {}
}
// end::GetItemPopularity[]

message AddItemRequest {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message UpdateItemRequest {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message CheckoutRequest {
    string cartId = 1;
}

message GetCartRequest {
    string cartId = 1;
}

message Cart {
    bool checkedOut = 1;
    repeated Item items = 2;
}

message Item {
    string itemId = 1;
    int32 quantity = 2;
}

// tag::GetItemPopularity[]
message GetItemPopularityRequest {
    string itemId = 1;
}

message GetItemPopularityResponse {
    string itemId = 1;
    int64 popularityCount = 2;
}
// end::GetItemPopularity[]
